[Feat] 주문 생성, 취소 리팩토링 및 트랜잭션 범위 수정